[package]
name = "bevy_enhanced_input"
version = "0.9.0"
authors = ["Hennadii Chernyshchyk <genaloner@gmail.com>"]
edition = "2024"
description = "Input manager for Bevy, inspired by Unreal Engine Enhanced Input"
readme = "README.md"
repository = "https://github.com/projectharmonia/bevy_enhanced_input"
keywords = ["bevy", "input"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
include = ["/src", "/LICENSE*"]

[dependencies]
bevy_enhanced_input_macros = { path = "macros", version = "0.9.0" }
bevy = { version = "0.15", default-features = false, features = ["serialize"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
bitflags = { version = "2.6", features = ["serde"] }

[dev-dependencies]
bevy = { version = "0.15", default-features = false, features = [
  "bevy_gilrs",
  "bevy_ui",
  "bevy_gizmos",
  "bevy_window",
  "x11",
] }
ron = "0.9"

[lints.clippy]
type_complexity = "allow"
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"

[workspace]
members = ["macros"]
