[package]
name = "bevy_enhanced_input"
version = "0.11.0"
authors = [
  "Hennadii Chernyshchyk <genaloner@gmail.com>",
  "Alice Cecile <alice.i.cecile@gmail.com>",
]
edition = "2024"
description = "Input manager for Bevy, inspired by Unreal Engine Enhanced Input"
readme = "README.md"
repository = "https://github.com/projectharmonia/bevy_enhanced_input"
keywords = ["bevy", "input"]
categories = ["game-development"]
license = "MIT OR Apache-2.0"
include = ["/src", "/LICENSE*"]

[dependencies]
bevy_enhanced_input_macros = { path = "macros", version = "0.11.0" }
bevy = { version = "0.16.0", default-features = false, features = [
  "serialize",
] }
log = "0.4" # Directly depend on `log` like other `no_std` Bevy crates, since `bevy_log` currently requires `std`.
variadics_please = "1.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
bitflags = { version = "2.6", default-features = false, features = ["serde"] }

[dev-dependencies]
bevy = { version = "0.16.0", default-features = false, features = [
  "bevy_gilrs",
  "bevy_log",
  "bevy_pbr",
  "bevy_ui_picking_backend",
  "bevy_ui",
  "bevy_window",
  "default_font",
  "tonemapping_luts",
  "x11",
] }
ron = "0.8"

[lints.clippy]
type_complexity = "allow"
alloc_instead_of_core = "warn"
std_instead_of_alloc = "warn"
std_instead_of_core = "warn"

[workspace]
members = ["macros"]
